force-app/main/default/objects/Product__c/fields/Times_90_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Times_90_Days_Late__c</fullName>
    <description>The number of times this account has been 90+ days late making a payment</description>
    <inlineHelpText>The number of times this account has been 90+ days late making a payment</inlineHelpText>
    <label>Times 90 Days Late</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>