force-app/main/default/objects/Product__c/fields/Times_NSF__c.field-meta.xml
<CustomField>
    <fullName>Times_NSF__c</fullName>
    <description>The number of times this account has incurred an NSF, where applicable</description>
    <inlineHelpText>The number of times this account has incurred an NSF, where applicable</inlineHelpText>
    <label>Times NSF</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>