force-app/main/default/objects/Product__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>