force-app/main/default/objects/Product__c/fields/Vendors_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>Vendors_Identifiers__c</fullName>
    <label>Vendors Identifiers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>