force-app/main/default/objects/Product__c/fields/VersaPay_From_Account__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_From_Account__c</fullName>
    <description>This field supports back-end payment processing operations</description>
    <inlineHelpText>This field supports back-end payment processing operations</inlineHelpText>
    <label>Payment System From Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>