force-app/main/default/objects/Product__c/fields/VersaPay_From_Fund_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_From_Fund_Token__c</fullName>
    <description>The account that funds are moving from in VersaPay</description>
    <inlineHelpText>The account that funds are moving from in VersaPay</inlineHelpText>
    <label>Payment System From Fund Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>