force-app/main/default/objects/Product__c/fields/VersaPay_Funding_Error__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Funding_Error__c</fullName>
    <description>A reported reason for EFT Funding failure, if applicable</description>
    <inlineHelpText>A reported reason for EFT Funding failure, if applicable</inlineHelpText>
    <label>Payment System Funding Error</label>
    <type>TextArea</type>
</CustomField>