force-app/main/default/objects/Product__c/fields/VersaPay_State__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_State__c</fullName>
    <description>The funding state of this product in VersaPay</description>
    <inlineHelpText>The funding state of this product in VersaPay</inlineHelpText>
    <label>Payment System State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>wait_for_claim</fullName>
            </value>
            <value>
                <fullName>wait_for_request_approval</fullName>
            </value>
            <value>
                <fullName>wait_for_bank_account_verification</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>in_progress</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>server_error</fullName>
            </value>
            <value>
                <fullName>unknown_error</fullName>
            </value>
            <value>
                <fullName>nsfed</fullName>
            </value>
            <value>
                <fullName>completed_but_nsfed</fullName>
            </value>
            <value>
                <fullName>wait_for_sending_approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>