force-app/main/default/objects/Product__c/fields/VersaPay_To_Account__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_To_Account__c</fullName>
    <description>The account that funds are moving to in VersaPay</description>
    <inlineHelpText>The account that funds are moving to in VersaPay</inlineHelpText>
    <label>Payment System To Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>