force-app/main/default/objects/Product__c/fields/VersaPay_To_Fund_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_To_Fund_Token__c</fullName>
    <description>Source fund identifier</description>
    <label>Payment System To Fund Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>