force-app/main/default/objects/Product__c/fields/VersaPay_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Token_Number__c</fullName>
    <description>The unique token that represents the most recent funding transaction for this Product</description>
    <inlineHelpText>The unique token that represents the most recent funding transaction for this Product</inlineHelpText>
    <label>Payment System Token Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>