force-app/main/default/objects/Product__c/fields/YTD_Annual_Fees_Charged__c.field-meta.xml
<CustomField>
    <fullName>YTD_Annual_Fees_Charged__c</fullName>
    <description>The total amount of monthly fees charged on this account, year-to-date</description>
    <inlineHelpText>The total amount of monthly fees charged on this account, year-to-date</inlineHelpText>
    <label>YTD Annual Fees Charged</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>