force-app/main/default/objects/Product__c/fields/YTD_Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Daily_Balance__c</fullName>
    <description>The average daily balance of this account, year-to-date</description>
    <inlineHelpText>The average daily balance of this account, year-to-date</inlineHelpText>
    <label>YTD Average Daily Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>