force-app/main/default/objects/Product__c/fields/YTD_Highest_Arrears__c.field-meta.xml
<CustomField>
    <fullName>YTD_Highest_Arrears__c</fullName>
    <label>YTD Highest Arrears</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>