force-app/main/default/objects/Product__c/fields/YTD_Highest_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Highest_Balance__c</fullName>
    <description>The peak balance obtained on this account, year-to-date</description>
    <inlineHelpText>The peak balance obtained on this account, year-to-date</inlineHelpText>
    <label>YTD Highest Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>