force-app/main/default/objects/Product__c/fields/YTD_Net_Amount_Of_Purchases__c.field-meta.xml
<CustomField>
    <fullName>YTD_Net_Amount_Of_Purchases__c</fullName>
    <description>The total net dollar amount of purchases on this account (purchases - returns), year-to-date</description>
    <inlineHelpText>The total net dollar amount of purchases on this account (purchases - returns), year-to-date</inlineHelpText>
    <label>YTD Net Amount Of Purchases</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>