force-app/main/default/objects/Product__c/fields/YTD_Net_Number_Of_Purchases__c.field-meta.xml
<CustomField>
    <fullName>YTD_Net_Number_Of_Purchases__c</fullName>
    <description>The total net number of purchases on this account (purchases - returns), year-to-date</description>
    <inlineHelpText>The total net number of purchases on this account (purchases - returns), year-to-date</inlineHelpText>
    <label>YTD Net Number Of Purchases</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>