force-app/main/default/objects/Product__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>The primary account holder&apos;s address postal code</description>
    <inlineHelpText>The primary account holder&apos;s address postal code</inlineHelpText>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>