force-app/main/default/objects/Product__c/recordTypes/Credit_Card_Account.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card_Account</fullName>
    <active>true</active>
    <label>Credit Card Account</label>
</RecordType>