force-app/main/default/objects/Product__c/recordTypes/Forward_Insolvent_Account.recordType-meta.xml
<RecordType>
    <fullName>Forward_Insolvent_Account</fullName>
    <active>true</active>
    <label>Forward Insolvent Account</label>
</RecordType>