force-app/main/default/objects/Product__c/recordTypes/Insolvency_Account.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Account</fullName>
    <active>true</active>
    <label>Insolvency Account</label>
</RecordType>