force-app/main/default/objects/Product__c/recordTypes/Insolvent_Account.recordType-meta.xml
<RecordType>
    <fullName>Insolvent_Account</fullName>
    <active>true</active>
    <label>Insolvent Account</label>
</RecordType>