force-app/main/default/objects/Product__c/recordTypes/Insolvent_Payment.recordType-meta.xml
<RecordType>
    <fullName>Insolvent_Payment</fullName>
    <active>true</active>
    <label>Insolvent Payment</label>
</RecordType>