force-app/main/default/objects/Product__c/recordTypes/Loan_Account.recordType-meta.xml
<RecordType>
    <fullName>Loan_Account</fullName>
    <active>true</active>
    <label>Loan Account</label>
</RecordType>