force-app/main/default/objects/Product__c/listViews/All_Loans.listView-meta.xml
<ListView>
    <fullName>All_Loans</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Credit_Limit__c</columns>
    <columns>Source_System__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Internal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Type__c</field>
        <operation>equals</operation>
        <value>Affirm Financial Term Loan</value>
    </filters>
    <label>All-Loans</label>
</ListView>