force-app/main/default/objects/Product__c/listViews/Collections_View.listView-meta.xml
<ListView>
    <fullName>Collections_View</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Delinquency_Cycles__c</columns>
    <columns>Last_Delinquency_Date__c</columns>
    <columns>Delinquency_Days__c</columns>
    <columns>External_Status_Current__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Last_Payment_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>PTP1_Amount__c</columns>
    <columns>PTP1_Date__c</columns>
    <columns>PTP1_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delinquency_Status_Formula__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Collections View</label>
</ListView>