force-app/main/default/objects/Product__c/listViews/Cycle_5_plus_Term_Loans.listView-meta.xml
<ListView>
    <fullName>Cycle_5_plus_Term_Loans</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>External_Status_Current__c</columns>
    <columns>PTP1_Amount__c</columns>
    <columns>PTP1_Date__c</columns>
    <columns>PTP1_mate__c</columns>
    <columns>State__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>Past_Due_Amount__c</columns>
    <columns>Delinquency_Days__c</columns>
    <columns>Delinquency_Cycles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Megasys</value>
    </filters>
    <filters>
        <field>Past_Due_Amount__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Branch_Number__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Internal_Status__c</field>
        <operation>notEqual</operation>
        <value>ChargedOff</value>
    </filters>
    <filters>
        <field>Delinquency_Cycles__c</field>
        <operation>greaterOrEqual</operation>
        <value>5</value>
    </filters>
    <label>Cycle 5 plus Term Loans</label>
</ListView>