force-app/main/default/objects/Product__c/listViews/French_View.listView-meta.xml
<ListView>
    <fullName>French_View</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Last_Delinquency_Date__c</columns>
    <columns>Delinquency_Cycles__c</columns>
    <columns>Delinquency_Days__c</columns>
    <columns>External_Status_Current__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Last_Payment_Amount__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>PTP1_Amount__c</columns>
    <columns>PTP1_Date__c</columns>
    <columns>PTP1_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delinquency_Cycles__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>External_Status_Current__c</field>
        <operation>notEqual</operation>
        <value>Z,D,B</value>
    </filters>
    <filters>
        <field>Current_Balance__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Customer_Language__c</field>
        <operation>equals</operation>
        <value>French</value>
    </filters>
    <label>French View</label>
</ListView>